Fixed label alignments of input fields

--- a/app/assets/stylesheets/materialize.css
+++ b/app/assets/stylesheets/materialize.css
@@ -6197,7 +6197,7 @@ textarea.materialize-textarea + label:after {
 
 .input-field {
     position: relative;
-    margin: 1rem 0;
+    margin-top: 1rem;
 }
 
 .input-field.inline {
